# xwjson

./: .gitignore  LICENSE  README.md  README_LONG.md  pyproject.toml  pyproject.xwjson.toml  pytest.ini  requirements.txt
.github/: workflows-config.yaml
.github/workflows/: compliance.yml  publish.yml
docs/: GUIDE_01_USAGE.md  INDEX.md  REF_01_REQ.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_15_API.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_51_TEST.md
docs/_archive/: EXTENSION_QUICK_REFERENCE.md  EXTENSION_SUMMARY.md  GUIDE_ADVANCED_USAGE.md  GUIDE_BASIC_USAGE.md  GUIDE_FORMAT_CONVERSION.md  GUIDE_PERFORMANCE.md  GUIDE_QUERIES.md  GUIDE_SCHEMA_VALIDATION.md  ICON_DESIGN_GUIDE.md  VISUAL_STUDIO_EXTENSION_GUIDE.md  VSCODE_EXTENSION_GUIDE.md  XWJSON_EXPLAINED_FOR_AI.md
docs/logs/reviews/: REVIEW_20260207_PROJECT_STATUS.md
src/: xwjson.py
src/exonware/xwjson/: __init__.py  base.py  config.py  contracts.py  defs.py  errors.py  facade.py  version.py
src/exonware/xwjson/common/: benchmarking.py
src/exonware/xwjson/formats/: __init__.py
src/exonware/xwjson/formats/binary/: __init__.py
src/exonware/xwjson/formats/binary/xwjson/: __init__.py  batch_operations.py  converter.py  dependency_graph.py  encoder.py  lazy.py  metadata.py  references.py  schema.py  serializer.py  transactions.py
src/exonware/xwjson/operations/: __init__.py  xwjson_ops.py
tests/: COMPREHENSIVE_TESTING_SUMMARY.md  FINAL_TEST_SUMMARY.md  README.md  TEST_COVERAGE_SUMMARY.md  TEST_SUMMARY.md  __init__.py  conftest.py  runner.py
tests/0.core/: __init__.py  conftest.py  runner.py  test_basic_encoding.py  test_import.py
tests/1.unit/: __init__.py  conftest.py  runner.py
tests/1.unit/formats_tests/: __init__.py
tests/1.unit/formats_tests/binary_tests/: __init__.py
tests/1.unit/formats_tests/binary_tests/xwjson_tests/: __init__.py  test_batch_operations.py  test_converter.py  test_dependency_graph.py  test_encoder.py  test_lazy.py  test_metadata.py  test_references.py  test_schema.py  test_serializer.py  test_transactions.py
tests/1.unit/operations_tests/: __init__.py  test_xwjson_ops.py
tests/2.integration/: __init__.py  conftest.py  runner.py
tests/2.integration/scenarios/: __init__.py  test_5gb_performance.py  test_additional_comprehensive_coverage.py  test_comprehensive_class_correctness.py  test_comprehensive_correctness_100_percent.py  test_comprehensive_xwnode_integration.py  test_edge_cases_comprehensive.py  test_format_conversion_matrix.py  test_round_trip_correctness.py  test_stress_batch_operations.py  test_stress_concurrent.py  test_stress_conversion_performance.py  test_stress_format_conversion.py  test_stress_large_files.py  test_stress_lazy_loading.py  test_stress_memory.py  test_stress_queries.py  test_stress_references.py  test_stress_schema_validation.py  test_stress_transactions.py  test_stress_xwnode_caching.py  test_stress_xwnode_indexing.py  test_xwnode_integration.py
tests/3.advance/: __init__.py  conftest.py  runner.py  test_extensibility.py  test_maintainability.py  test_performance.py  test_security.py  test_usability.py
