
# Source size (src/*): ~229.7 KB
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "exonware-xwjson"
  dynamic = ["version"]
  description = "Extended binary JSON format - single version of truth for all format conversions"
  readme = "README.md"
  requires-python = ">=3.12"
  keywords = []
  classifiers = []
  dependencies = []
  authors = []
  "{ name" = "eXonware Backend Team"

  [project.license]
    text = "MIT"

  [project.optional-dependencies]
    lazy = []
    exonware-xwlazy = "349706 ; 0.33 MB"
    dev = []
    "black>" = "23.0.0\",  # file-size=3914855 ; 3.73 MB"
    "isort>" = "5.12.0\",  # file-size=568232 ; 0.54 MB"
    "mypy>" = "1.0.0\",  # file-size=29775254 ; 28.40 MB"
    "pytest>" = "7.0.0\",  # file-size=3152415 ; 3.01 MB"
    "pytest-asyncio>" = "0.21.0\",  # file-size=46752 ; 0.04 MB"
    "pytest-cov>" = "4.0.0\",  # file-size=71639 ; 0.07 MB"
    full = ["atomicwrites", "interegular"]
    attrs = "440438 ; 0.42 MB"
    bcrypt = "329770 ; 0.31 MB"
    bottleneck = "460187 ; 0.44 MB"
    brotli = "868889 ; 0.83 MB"
    cachebox = "971831 ; 0.93 MB"
    cachetools = "105183 ; 0.10 MB"
    cbor2 = "406858 ; 0.39 MB"
    charset-normalizer = "580726 ; 0.55 MB"
    cloudpickle = "125961 ; 0.12 MB"
    cython = "13606517 ; 12.98 MB"
    dicttoxml = "96721 ; 0.09 MB"
    fqdn = "31325 ; 0.03 MB"
    httpx = "765633 ; 0.73 MB"
    hyperlight_hyperjson = "261754 ; 0.25 MB"
    isoduration = "51360 ; 0.05 MB"
    jmespath = "149971 ; 0.14 MB"
    json5 = "377396 ; 0.36 MB"
    jsonpatch = "75774 ; 0.07 MB"
    jsonpath-ng = "300863 ; 0.29 MB"
    jsonschema = "1056022 ; 1.01 MB"
    lz4 = "277804 ; 0.26 MB"
    msgpack = "238387 ; 0.23 MB"
    msgspec = "525449 ; 0.50 MB"
    numpy = "52803492 ; 50.36 MB"
    opentelemetry-api = "423339 ; 0.40 MB"
    orjson = "289443 ; 0.28 MB"
    pandas = "67223490 ; 64.11 MB"
    psutil = "2104166 ; 2.01 MB"
    pyarrow = "90047710 ; 85.88 MB"
    pylru = "74244 ; 0.07 MB"
    pymongo = "6208897 ; 5.92 MB"
    pytz = "1081137 ; 1.03 MB"
    PyYAML = "730195 ; 0.70 MB"
    regex = "1765857 ; 1.68 MB"
    rfc3339-validator = "6432 ; 0.01 MB"
    rfc3987 = "58298 ; 0.06 MB"
    rich = "2130726 ; 2.03 MB"
    scikit-learn = "43016103 ; 41.02 MB"
    tomli-w = "25350 ; 0.02 MB"
    uarray = "225331 ; 0.21 MB"
    uri-template = "76832 ; 0.07 MB"
    webcolors = "88069 ; 0.08 MB"
    xmltodict = "65213 ; 0.06 MB"
    zstandard = "1384115 ; 1.32 MB"

  [project.urls]
    Homepage = "https://exonware.com"
    Repository = "https://github.com/exonware/xwjson"
    Documentation = "https://github.com/exonware/xwjson#readme"
    Subtree = "https://github.com/exonware/xwjson.git"

[tool]

  [tool.hatch]

    [tool.hatch.version]
      path = "src/exonware/xwjson/version.py"

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          packages = ["src/exonware"]
          py-modules = ["src/xwjson"]

        [tool.hatch.build.targets.sdist]
          include = ["/src", "/tests", "/README.md", "/.github"]
