# Source size (src/*): ~230.7 KB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwjson"
dynamic = ["version"]
description = "Extended binary JSON format - single version of truth for all format conversions"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["serialization", "json", "binary", "messagepack", "exonware"]
classifiers = []
dependencies = [
  "exonware-xwsystem==0.9.0.39",
  "exonware-xwnode==0.9.0.25",
]
authors = [
  { name = "eXonware Backend Team", email = "connect@exonware.com" },
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
# First-party XW libs composed by this package (excludes exonware-xwsystem==0.9.0.37; see lazy/full).
xw = [
  "exonware-xwnode==0.9.0.25",
]
lazy = [
  "exonware-xwjson[xw]==0.9.0.23",
  "exonware-xwlazy==1.0.1.81",
  "exonware-xwsystem[lazy]==0.9.0.39",
  "exonware-xwnode[xw]==0.9.0.25",
]
full = [
  "exonware-xwjson[xw]==0.9.0.23",
  "exonware-xwsystem[full]==0.9.0.39",
  "exonware-xwnode[xw]==0.9.0.25",
  "jsonpath-ng>=1.6.0",
  "atomicwrites>=1.4.0",
  "attrs>=22.0.0",
  "httpx>=0.25.0",
  "interegular>=0.3.2",
  "jsonschema>=4.0.0",
  "lz4>=4.0.0",
  "msgpack>=1.0.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "PyYAML>=6.0",
  "regex>=2023.0.0",
  "rich>=13.0.0",
  "tomli>=2.0.0",
  "zstandard>=0.22.0",
]
dev = [
  "exonware-xwjson[full]==0.9.0.23",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://exonware.com"
Repository = "https://github.com/exonware/xwjson"
Documentation = "https://github.com/exonware/xwjson#readme"
Subtree = "https://github.com/exonware/xwjson.git"

[tool.exonware.upload]
subtree_push_mode = "snapshot"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.hatch.version]
path = "src/exonware/xwjson/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]
py-modules = ["src/xwjson"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/.github"]
